[PE] SetNeedsPaintPropertyUpdate on compositing reason about animation changes

Bug: 788718
Change-Id: I2e4519e377ea507cb4856594a284750892f9ce30